--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Free VPN APP</string>
     <string name="app_logo">App Logo</string>
+    <string name="country_flag">Country Flag</string>
+    <string name="navigate">Navigate</string>
+
 </resources>
