--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="country_flag">Country Flag</string>
     <string name="navigate">Navigate</string>
 
+    <string name="banner_Id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="in">ca-app-pub-3940256099942544/6300978111</string>
+
 </resources>
