--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
 
     <string name="banner_Id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="in">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="open_ads">ca-app-pub-3940256099942544/9257395921</string>
+    <string name="interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>
 
 </resources>
